--- CHANGES SINCE UASNIFFER 0.4 ----------------------------------------------

* Added dependency: znerd-util.
* Refactored code and improved code style.


--- CHANGES SINCE UASNIFFER 0.3 ----------------------------------------------

* Added unit tests for Amazon Kindle devices (updated sniffing code).
* Added unit test for Firefox 5 beta.
* Added unit test for Firefox 6 beta on Mac OS X 10.7.
* Added unit test for Firefox 8 alpha 1.
* Added unit test for RockMelt 0.9.58.494.
* Added unit test for Opera 11.50.
* Added unit test for Maxthon 3.0 (updated sniffing code).
* Added unit test for Maxthon 2.0 on Windows Vista.
* Added unit test for iPad running iOS 3.2.
* Added unit test for iPhone running iOS 4.3.3.
* Added unit test for Safari 5.0.5 on Mac OS X 10.6.8.
* Added unit test for Safari 5.1.0 on Mac OS X 10.7.
* Added unit test for B&N Nook 1 e-reader device (updated sniffing code).
* Added unit test for Flock 0.4 on Mac OS X (PPC).
* Added unit test for Flock 2.5.6 on Linux (x86-64).
* Added unit test for Flock 3.5.3 on Mac OS X 10.6.6.
* Added unit test for Chrome 12 on Mac OS X 10.7.0.
* Improved unit test for Blackberry 9800.
* Slightly changed Safari detection code.
* Slightly improved Blackberry detection code.


--- CHANGES SINCE UASNIFFER 0.2 ----------------------------------------------

* Detecting RockMelt browser.
* Detecting Chrome Frame engine inside MSIE.
* Detecting Chrome OS.
* Detecting Windows 8.
* Detecting Symbian OS.
* Detecting iPad.
* Detecting old NCSA Mosaic browsers
* Detecting Android tablets.
* Detecting Blackberry browser (instead of just device).
* Detecting Nokia browser.
* Properly detecting (newer) WebKit-based Flock releases.
* Supporting 4 levels in Flock versions.
* Added several agent strings for unit testing.
* Changed "iPhoneOS" string to "iOS"
* Gave the interface of the UserAgent class an overhaul.
* POM now assumes UTF-8 for Java source files.